--- a/stylesheet.css
+++ b/stylesheet.css
@@ -151,7 +151,8 @@ h4{
 }
 
 #contentarea input,
-#registration input
+#registration input,
+#login input
 {
 	margin:0px 0px 0px 0px;
 	border:0px;
