--- a/stylesheet.css
+++ b/stylesheet.css
@@ -167,6 +167,22 @@ h4{
 	box-shadow: 1px 1px 5px #888888 inset;
 }
 
+#fileupload input
+{
+	border:0px;
+	font-size:150%;
+	height:38px;
+	padding:5px 0px 0px 10px;
+	vertical-align:middle;
+	width:300px;
+	font-family: 'Ubuntu', arial, serif;
+	-moz-box-shadow: 0px 0px 0px #888888 inset; /* Firefox */
+	-webkit-box-shadow: 0px 0px 0px #888888 inset; /* Safari and Chrome */
+	box-shadow: 0px 0px 0px #888888 inset;
+	
+}
+
+
 tr:nth-child(odd){
     background-color:#EEE;
 }
