Item: Duration Input POS: Print / Clear Cat / Item: Bug Squashing

--- a/POS.css
+++ b/POS.css
@@ -34,6 +34,9 @@
     body {
         visibility: hidden;
     }
+    #print {
+        display: none;
+    }
     #contentarea {
         position: absolute;
         visibility: visible;
