CSS Fix. Minor fixes.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,12 +10,11 @@ body{
 #sidebar
 {
 	float:left;
-	margin:50px 0px 100px 20px;
+	margin:20px 0px 100px 20px;
 	padding-right:20px;
 	border-right-style:dotted;
 	border-right-width:2px;
 	border-right-color:#F05B16;
-	height:130px;
 	width:170px;
 }
 
@@ -150,9 +149,10 @@ h4{
 	font-family: 'Molengo', arial, serif;
 }
 
-#contentarea input,
-#registration input,
-#login input
+#contentarea input[type="text"],
+#registration input[type="text"],
+#registration input[type = 'password'],
+#login input[type="text"]
 {
 	margin:0px 0px 0px 0px;
 	border:0px;
@@ -167,21 +167,15 @@ h4{
 	box-shadow: 1px 1px 5px #888888 inset;
 }
 
-#fileupload input
+input[type="file"]
 {
-	border:0px;
-	font-size:150%;
-	height:38px;
-	padding:5px 0px 0px 10px;
-	vertical-align:middle;
-	width:300px;
-	font-family: 'Ubuntu', arial, serif;
-	-moz-box-shadow: 0px 0px 0px #888888 inset; /* Firefox */
-	-webkit-box-shadow: 0px 0px 0px #888888 inset; /* Safari and Chrome */
-	box-shadow: 0px 0px 0px #888888 inset;
-	
+	font-family: 'Ubuntu', arial, serif;	
 }
 
+input[type="submit"]
+{
+	font-family: 'Ubuntu', arial, serif;
+}
 
 tr:nth-child(odd){
     background-color:#EEE;
@@ -190,6 +184,7 @@ tr:nth-child(odd){
 img.zooming {
     max-height: 50px;
     max-width: 50px;
+	margin:-10px 0px 0px 0px;
 }
 
 div.form-item {
@@ -199,6 +194,7 @@ div.form-item {
 div.form-item label {
     display:block;
     font-weight:bold;
+	margin:15px 0px 7px 0px;
 }
 
 span.form-required {
