Sidebar / stylesheet: waiter call AJAX Waiter Controller: AJAX reply Categories Controller / Model: TSV Items Controller / Model: TSV POS: Grouping bug in main page Globals: Added escape(str) function for JS input

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -248,3 +248,9 @@ span.form-required {
     background:#EEF;
     cursor:pointer;
 }
+
+.waiterCalled {
+    border: 1px solid #D77;
+    color: #A30000;
+    background-color: #FCC;
+}
